# Velium

./: .gitignore  CMakeLists.txt  imgui.ini
Game/: CMakeLists.txt  main.cpp
Game/src/: main.cpp
Game/src/debug/: ImGuiLayer.cpp  ImGuiLayer.h
Velium/: CMakeLists.txt
Velium/lib/imgui/: imconfig.h
Velium/src/: Velium.h
Velium/src/graphics/: DebugGUIStyle.cpp  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
Velium/src/resources/: ResHandler.cpp  ResHandler.h
lib/imgui/: imgui.cpp  imgui.h
src/: Velium.h  main.cpp
src/graphics/: DebugGUIStyle.cpp  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h  window.cpp  window.h
