cmake_minimum_required(VERSION 3.21)
project(VelDev)

set(CMAKE_CXX_STANDARD 23)

set(VELIUM_INCLUDE_DIR
        ${CMAKE_CURRENT_SOURCE_DIR}/Velium)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(Velium)

include_directories(${VELIUM_INCLUDE_DIR}/src)
message(STATUS "test: ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Velium/src/res DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})

add_subdirectory(Game)
